Bug 36533 - [Qt] Compilation error on Qt for Embedded Linux built with -qconfig small
Summary: [Qt] Compilation error on Qt for Embedded Linux built with -qconfig small
Status: CLOSED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit Qt (show other bugs)
Version: 528+ (Nightly build)
Hardware: Other Linux
: P2 Normal
Assignee: Nobody
URL:
Keywords: Qt
Depends on:
Blocks: 35784
  Show dependency treegraph
 
Reported: 2010-03-24 08:18 PDT by Tasuku Suzuki
Modified: 2010-05-07 00:45 PDT (History)
3 users (show)

See Also:


Attachments
add #ifndef QT_NO_LIBRARY ~ #endif (1.50 KB, patch)
2010-03-24 08:25 PDT, Tasuku Suzuki
no flags Details | Formatted Diff | Diff
add #ifndef QT_NO_IM ~ #endif (1.25 KB, patch)
2010-03-24 08:38 PDT, Tasuku Suzuki
no flags Details | Formatted Diff | Diff
add #ifndef QT_NO_SETTINGS ~ #endif (2.25 KB, patch)
2010-03-24 08:48 PDT, Tasuku Suzuki
hausmann: review+
hausmann: commit-queue+
Details | Formatted Diff | Diff
add #ifndef QT_NO_DEBUG_STREAM ~ #endif (1.13 KB, patch)
2010-03-24 09:09 PDT, Tasuku Suzuki
no flags Details | Formatted Diff | Diff
add #ifndef QT_NO_DESKTOPSERVICES ~ #endif (1.13 KB, patch)
2010-03-24 09:16 PDT, Tasuku Suzuki
no flags Details | Formatted Diff | Diff
add #ifndef QT_NO_SETTINGS ~ #endif (2.45 KB, patch)
2010-03-25 09:31 PDT, Tasuku Suzuki
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Tasuku Suzuki 2010-03-24 08:18:02 PDT
-qconfig small disables some features like settings, input context and so on.
Comment 1 Tasuku Suzuki 2010-03-24 08:25:06 PDT
Created attachment 51499 [details]
add #ifndef QT_NO_LIBRARY ~ #endif
Comment 2 Tasuku Suzuki 2010-03-24 08:38:00 PDT
Created attachment 51501 [details]
add #ifndef QT_NO_IM ~ #endif
Comment 3 Tasuku Suzuki 2010-03-24 08:48:25 PDT
Created attachment 51504 [details]
add #ifndef QT_NO_SETTINGS ~ #endif
Comment 4 Tasuku Suzuki 2010-03-24 09:09:34 PDT
Created attachment 51509 [details]
add #ifndef QT_NO_DEBUG_STREAM ~ #endif
Comment 5 Tasuku Suzuki 2010-03-24 09:16:33 PDT
Created attachment 51511 [details]
add #ifndef QT_NO_DESKTOPSERVICES ~ #endif
Comment 6 Eric Seidel (no email) 2010-03-24 23:42:30 PDT
Comment on attachment 51501 [details]
add #ifndef QT_NO_IM ~ #endif

What does this do, and why is it useful?  What does NO_IM mean?
Comment 7 Eric Seidel (no email) 2010-03-24 23:43:26 PDT
Comment on attachment 51504 [details]
add #ifndef QT_NO_SETTINGS ~ #endif

This seems specific to inspector settings. Why woudl it be called NO_SETTINGS?  I expected this to deal with Settings.h  Please explain what you're tryign to do in the ChangeLog.
Comment 8 Eric Seidel (no email) 2010-03-24 23:44:11 PDT
Comment on attachment 51509 [details]
add #ifndef QT_NO_DEBUG_STREAM ~ #endif

OK.
Comment 9 Eric Seidel (no email) 2010-03-24 23:44:43 PDT
Comment on attachment 51511 [details]
add #ifndef QT_NO_DESKTOPSERVICES ~ #endif

OK.
Comment 10 Eric Seidel (no email) 2010-03-24 23:47:21 PDT
Comment on attachment 51499 [details]
add #ifndef QT_NO_LIBRARY ~ #endif

Seems sane.  ChangeLog could be better.
Comment 11 WebKit Commit Bot 2010-03-25 03:12:51 PDT
Comment on attachment 51499 [details]
add #ifndef QT_NO_LIBRARY ~ #endif

Clearing flags on attachment: 51499

Committed r56525: <http://trac.webkit.org/changeset/56525>
Comment 12 WebKit Commit Bot 2010-03-25 05:22:33 PDT
Comment on attachment 51509 [details]
add #ifndef QT_NO_DEBUG_STREAM ~ #endif

Clearing flags on attachment: 51509

Committed r56533: <http://trac.webkit.org/changeset/56533>
Comment 13 Tasuku Suzuki 2010-03-25 05:35:48 PDT
(In reply to comment #6)
> (From update of attachment 51501 [details])
> What does this do, and why is it useful?  What does NO_IM mean?

QT_NO_IM disables QInputContext that abstracts the input method dependent data and composing state.
The patch adds an ifdef to check QInputContext's availability.
Comment 14 WebKit Commit Bot 2010-03-25 06:21:08 PDT
Comment on attachment 51511 [details]
add #ifndef QT_NO_DESKTOPSERVICES ~ #endif

Clearing flags on attachment: 51511

Committed r56536: <http://trac.webkit.org/changeset/56536>
Comment 15 WebKit Commit Bot 2010-03-25 06:21:13 PDT
All reviewed patches have been landed.  Closing bug.
Comment 16 Tasuku Suzuki 2010-03-25 09:31:02 PDT
Created attachment 51647 [details]
add #ifndef QT_NO_SETTINGS ~ #endif

> This seems specific to inspector settings. Why woudl it be called NO_SETTINGS? 
> I expected this to deal with Settings.h  Please explain what you're tryign to
> do in the ChangeLog.

We need to check if QSettings is available with the macro QT_NO_SETTINGS.
If QSettings is disabled by Qt, inspector should not get/set settings.
Comment 17 Tasuku Suzuki 2010-03-26 12:53:16 PDT
This is not resolved yet.
Comment 18 Eric Seidel (no email) 2010-04-01 17:38:31 PDT
Comment on attachment 51647 [details]
add #ifndef QT_NO_SETTINGS ~ #endif

This seems sad.  This will spew a bunch of warnings.  But OK.
Comment 19 WebKit Commit Bot 2010-04-01 20:35:00 PDT
Comment on attachment 51647 [details]
add #ifndef QT_NO_SETTINGS ~ #endif

Rejecting patch 51647 from commit-queue.

Unexpected failure when landing patch!  Please file a bug against webkit-patch.
Failed to run "['WebKitTools/Scripts/webkit-patch', '--status-host=webkit-commit-queue.appspot.com', 'land-attachment', '--force-clean', '--non-interactive', '--build-style=both', '--quiet', '51647', '--parent-command=commit-queue', '--no-update']" exit_code: 1
ERROR: Builders ["Leopard Intel Release (Tests)"] are red, please do not commit.
See http://build.webkit.org.
Pass --ignore-builders to bypass this check.
Comment 20 Eric Seidel (no email) 2010-04-01 21:48:57 PDT
Comment on attachment 51647 [details]
add #ifndef QT_NO_SETTINGS ~ #endif

That's our bug, not yours.
Comment 21 Adam Barth 2010-04-01 21:56:09 PDT
> That's our bug, not yours.

https://bugs.webkit.org/show_bug.cgi?id=37009 in fact.
Comment 22 WebKit Commit Bot 2010-04-02 01:16:52 PDT
Comment on attachment 51647 [details]
add #ifndef QT_NO_SETTINGS ~ #endif

Clearing flags on attachment: 51647

Committed r56984: <http://trac.webkit.org/changeset/56984>
Comment 23 WebKit Commit Bot 2010-04-02 01:16:58 PDT
All reviewed patches have been landed.  Closing bug.
Comment 24 Simon Hausmann 2010-04-09 03:16:41 PDT
Re-opening becaues of missing QT_NO_IM patch.
Comment 25 Simon Hausmann 2010-04-09 03:18:14 PDT
Comment on attachment 51504 [details]
add #ifndef QT_NO_SETTINGS ~ #endif

This patch is correct, it's the correct feature define in Qt for the QSettings class.
Comment 26 Tasuku Suzuki 2010-04-09 03:29:45 PDT
(In reply to comment #25)
> (From update of attachment 51504 [details])
> This patch is correct, it's the correct feature define in Qt for the QSettings
> class.

An alternative patch has been merged here https://bugs.webkit.org/show_bug.cgi?id=36533#c22

see also
https://bugs.webkit.org/show_bug.cgi?id=36533#c7
https://bugs.webkit.org/show_bug.cgi?id=36533#c16
Comment 27 WebKit Commit Bot 2010-04-09 19:16:37 PDT
Comment on attachment 51501 [details]
add #ifndef QT_NO_IM ~ #endif

Clearing flags on attachment: 51501

Committed r57397: <http://trac.webkit.org/changeset/57397>
Comment 28 WebKit Commit Bot 2010-04-09 19:16:45 PDT
All reviewed patches have been landed.  Closing bug.
Comment 29 Simon Hausmann 2010-05-07 00:44:41 PDT
Revision r56525 cherry-picked into qtwebkit-2.0 with commit c59c560624f3fad76ff71ea1b1022543397a779e
Revision r56533 cherry-picked into qtwebkit-2.0 with commit 7e5b806e5d6b024c4faf3f604c41b7d2f952c37d
Revision r56536 cherry-picked into qtwebkit-2.0 with commit 74e3c511cdf041acdcdec3d34e1fa39f1595d043
Revision r56984 cherry-picked into qtwebkit-2.0 with commit 2adfb941d211c17eab2f06ac91d0c83c51576537
Revision r57397 cherry-picked into qtwebkit-2.0 with commit 6493fd316cbe4aed752ea3541affbb6f10a0aeb0