2010-03-25  Tasuku Suzuki  <tasuku.suzuki@nokia.com>

Reviewed by Eric Seidel.

        [Qt]Fix compile error with QT_NO_LIBRARY
        https://bugs.webkit.org/show_bug.cgi?id=36533

        * platform/FileSystem.h:
        * platform/qt/FileSystemQt.cpp:
        (WebCore::unloadModule):

Canonical link: https://commits.webkit.org/47819@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56525 268f45cc-cd09-0410-ab3c-d52691b4dbfc